--- a/untree.co-archiark/about.html
+++ b/untree.co-archiark/about.html
@@ -160,7 +160,7 @@
 	</div>
 
 
-	<div class="section sec-team sec-4 pb-5">
+	<!-- <div class="section sec-team sec-4 pb-5">
 		<div class="container">
 			<div class="row mb-5">
 				<div class="col-lg-6 mx-auto text-center">
@@ -233,7 +233,7 @@
 			</div>
 
 		</div>
-	</div>
+	</div> -->
 
 
 	
