--- a/website/back/about2.html
+++ b/website/back/about2.html
@@ -89,7 +89,7 @@
 	</div>
 
 
-	<div class="section sec-team sec-4 pb-5">
+	<!-- <div class="section sec-team sec-4 pb-5">
 		<div class="container">
 			<div class="row mb-5">
 				<div class="col-lg-6 mx-auto text-center">
@@ -163,7 +163,7 @@
 
 		</div>
 	</div>
-
+ -->
 
 	
 
